feat(env): use token from env

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "homepage": "https://github.com/tristanwagner/classicbot#readme",
   "dependencies": {
     "discord.js": "^11.4.2",
+    "dotenv": "^8.0.0",
     "fast-csv": "^2.5.0",
     "fuzzball": "^1.2.0",
     "webshot": "^0.18.0"
